--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
             <div class="col-md-12">
                 <h2>Herzlich Willkommen in der Ordination Dr. Petra Douschan. <br> Lernen Sie uns und unsere Ordination kennen.</h2>
                 <hr>
-                <p id="index-text">In unseren Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
+                <p class="index-text">In unseren Wahlarztordination ist uns das Wohlergehen und Lächeln unserer Patienten wichtig. Direkt vor unserer Praxis
                     haben Sie die Möglichkeit stress- und gebührenfrei Ihr Auto zu parken. Selbstverständlich sind sowohl der Zugang in die Ordination,
                     als auch die Räumlichkeiten barrierefrei zu erreichen. Wir bemühen uns um eine rasche Terminvergabe und möglichst geringe Wartezeiten für alle unsere Patienten.
+                    </p>
+                <hr>
+                <p class="index-text">
                     Als Patient in unserer Wahlarztpraxis bekommen Sie von den von uns erbrachten Kassenleistungen bis zu 80% von Ihrer Krankenkasse rückerstattet.
                     Gerne übernehmen wir für Sie das Einreichen der Rechnung bei Ihrer Krankenkasse. </p>
                 <!--<a class="btn btn-primary btn-lg" href="#">Call to Action!</a>-->
